--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2406.14673"><b>Insights into LLM Long-Context Failures: When Transformers Know but Don't Tell.</b></a>  <br />    Taiming Lu and Muhan Gao and Kuai Yu and Adam Byerly and Daniel Khashabi <br />    <font color="DarkRed">arXiv preprint arXiv:2406.14673</font>, 2024. <font size=-1><a href="https://github.com/TaiMingLu/know-dont-tell">[code]</a></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2405.13274"><b>DiffNorm: Self-Supervised Normalization for Non-autoregressive Speech-to-speech Translation.</b></a>  <br />    Weiting Tan and Jingyu Zhang and Lingfeng Shen and Daniel Khashabi and Philipp Koehn <br />    <font color="DarkRed">arXiv preprint arXiv:2405.13274</font>, 2024. <font size=-1></font></p>
 </li>
 </ul>
@@ -152,7 +156,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2305.13252"><b>&lsquo;&lsquo;According to &hellip;&rsquo;&rsquo;: Prompting Language Models Improves Quoting from Pre-Training Data.</b></a>  <br />    Orion Weller, Marc Marone, Nathaniel Weir, Dawn Lawrie, Daniel Khashabi and Benjamin Van Durme. <br />    <font color="DarkRed">Conference of the European Chapter of the Association for Computational Linguistics (EACL)</font>, 2024. <font size=-1><a href="https://www.youtube.com/watch?v=Ke8Phecf6Ko">[talk]</a> <a href="https://github.com/JHU-CLSP/according-to">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2305.13252"><b>&lsquo;&lsquo;According to &hellip;&rsquo;&rsquo;: Prompting Language Models Improves Quoting from Pre-Training Data.</b></a>  <br />    Orion Weller, Marc Marone, Nathaniel Weir, Dawn Lawrie, Daniel Khashabi and Benjamin Van Durme. <br />    <font color="DarkRed">Conference of the European Chapter of the Association for Computational Linguistics (EACL)</font>, 2024. <font size=-1><a href="https://www.youtube.com/watch?v=Ke8Phecf6Ko">[talk]</a> <a href="https://github.com/JHU-CLSP/according_to_wikipedia">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -369,7 +373,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-06-05 16:21:27 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-06-26 14:12:58 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
