--- a/index.html
+++ b/index.html
@@ -96,11 +96,15 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2406.20092"><b>LLaVolta: Efficient Multi-modal Models via Stage-wise Visual Context Compression.</b></a>  <br />    Jieneng Chen and Luoxin Ye and Ju He and Zhao-Yang Wang and Daniel Khashabi and Alan Yuille <br />    <font color="DarkRed">arXiv preprint arXiv:2406.20092</font>, 2024. <font size=-1><a href="https://github.com/Beckschen/LLaVolta">[code]</a> <a href="https://beckschen.github.io/llavolta.html">[project]</a></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2406.14673"><b>Insights into LLM Long-Context Failures: When Transformers Know but Don't Tell.</b></a>  <br />    Taiming Lu and Muhan Gao and Kuai Yu and Adam Byerly and Daniel Khashabi <br />    <font color="DarkRed">arXiv preprint arXiv:2406.14673</font>, 2024. <font size=-1><a href="https://github.com/TaiMingLu/know-dont-tell">[code]</a></font></p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2405.13274"><b>DiffNorm: Self-Supervised Normalization for Non-autoregressive Speech-to-speech Translation.</b></a>  <br />    Weiting Tan and Jingyu Zhang and Lingfeng Shen and Daniel Khashabi and Philipp Koehn <br />    <font color="DarkRed">arXiv preprint arXiv:2405.13274</font>, 2024. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2405.13274"><b>DiffNorm: Self-Supervised Normalization for Non-autoregressive Speech-to-speech Translation.</b></a>  <br />    Weiting Tan and Jingyu Zhang and Lingfeng Shen and Daniel Khashabi and Philipp Koehn <br />    <font color="DarkRed">arXiv preprint arXiv:2405.13274</font>, 2024. <font size=-1><a href="https://github.com/steventan0110/DiffNorm">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -373,7 +377,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-06-26 14:12:58 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-06-30 21:54:24 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
