--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2403.12958"><b>Dated Data: Tracing Knowledge Cutoffs in Large Language Models.</b></a>  <br />    Jeffrey Cheng and Marc Marone and Orion Weller and Dawn Lawrie and Daniel Khashabi and Benjamin Van Durme <br />    <font color="DarkRed">arXiv preprint arXiv:2403.12958</font>, 2024. <font size=-1><a href="http://danielkhashabi.com/files/2024_cuttoff/MASC">- Timestamp.pdf [poster]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2403.12958"><b>Dated Data: Tracing Knowledge Cutoffs in Large Language Models.</b></a>  <br />    Jeffrey Cheng and Marc Marone and Orion Weller and Dawn Lawrie and Daniel Khashabi and Benjamin Van Durme <br />    <font color="DarkRed">arXiv preprint arXiv:2403.12958</font>, 2024. <font size=-1><a href="http://danielkhashabi.com/files/2024_cuttoff/MASC-Timestamp.pdf">[poster]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -377,7 +377,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-06-30 21:54:24 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-07-01 22:36:49 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
