--- a/index.html
+++ b/index.html
@@ -120,10 +120,6 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2403.12958"><b>Dated Data: Tracing Knowledge Cutoffs in Large Language Models.</b></a>  <br />    Jeffrey Cheng, <a href="https://marcmarone.com/"><font color="Black"> Marc Marone</font></a>, <a href="https://orionweller.github.io/"><font color="Black"> Orion Weller</font></a>, Dawn Lawrie, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />    <font color="DarkRed">arXiv preprint arXiv:2403.12958</font>, 2024. <font size=-1><a href="http://danielkhashabi.com/files/2024_cuttoff/MASC-Timestamp.pdf">[poster]</a> <a href="https://x.com/jeff_cheng_77/status/1772355368649187669">[tweet]</a></font></p>
-</li>
-</ul>
-<ul>
 <li><p><a href="https://arxiv.org/abs/2403.11905"><b>TurkingBench: A Challenge Benchmark for Web Agents.</b></a>  <br />    Kevin Xu, Yeganeh Kordi, Kate Sanders, Yizhong Wang, Adam Byerly, Jack Zhang, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />    <font color="DarkRed">arXiv preprint arXiv:2403.11905</font>, 2024. <font size=-1><a href="https://github.com/JHU-CLSP/turking-bench">[data]</a> <a href="https://turkingbench.github.io/">[demo]</a> <a href="https://x.com/KevLXu/status/1771171188363985312">[tweet]</a></font></p>
 </li>
 </ul>
@@ -132,7 +128,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2310.03991"><b>SemStamp: A Semantic Watermark with Paraphrastic Robustness for Text Generation.</b></a>  <br />    <a href="https://nlp4policy.notion.site/Abe-Hou-21661aa32a7a4d19a45b5bf31c11a99e"><font color="Black"> Abe Bohan Hou</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Tianxing He, Yichen Wang, Yung-Sung Chuang, Hongwei Wang, <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and Yulia Tsvetkov. <br />    <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2024. <font size=-1><a href="https://github.com/bohanhou14/SemStamp">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2403.12958"><b>Dated Data: Tracing Knowledge Cutoffs in Large Language Models.</b></a>  <br />    Jeffrey Cheng, <a href="https://marcmarone.com/"><font color="Black"> Marc Marone</font></a>, <a href="https://orionweller.github.io/"><font color="Black"> Orion Weller</font></a>, Dawn Lawrie, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />    <font color="DarkRed">Conference on Language Modeling (COLM)</font>, 2024. <font size=-1><a href="http://danielkhashabi.com/files/2024_cuttoff/MASC-Timestamp.pdf">[poster]</a> <a href="https://x.com/jeff_cheng_77/status/1772355368649187669">[tweet]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -145,6 +141,10 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2402.18678"><b>RORA: Robust Free-Text Rationale Evaluation.</b></a>  <br />    <a href="https://zipjiang.github.io/"><font color="Black"> Zhengping Jiang</font></a>, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, Hanjie Chen, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a>. <br />    <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2024. <font size=-1><a href="https://x.com/Yining__Lu/status/1763552932396695762">[tweet]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2310.03991"><b>SemStamp: A Semantic Watermark with Paraphrastic Robustness for Text Generation.</b></a>  <br />    <a href="https://nlp4policy.notion.site/Abe-Hou-21661aa32a7a4d19a45b5bf31c11a99e"><font color="Black"> Abe Bohan Hou</font></a>, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Tianxing He, Yichen Wang, Yung-Sung Chuang, Hongwei Wang, <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and Yulia Tsvetkov. <br />    <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2024. <font size=-1><a href="https://github.com/bohanhou14/SemStamp">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -212,18 +212,6 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2111.07408"><b>Time Waits for No One! Analysis and Challenges of Temporal Misalignment.</b></a>  <br />    Kelvin Luu, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Suchin Gururangan, Karishma Mandyam and Noah A Smith. <br />    <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2022. <font size=-1><a href="https://github.com/Kel-Lu/time-waits-for-no-one">[data]</a> <a href="https://www.youtube.com/watch?v=t44GNfHFqns">[talk]</a></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2112.08726"><b>NeuroLogic A*esque Decoding: Constrained Text Generation with Lookahead Heuristics.</b></a>  <br />    Ximing Lu, Sean Welleck, Peter West, Liwei Jiang, Jungo Kasai, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Ronan Le Bras, Lianhui Qin, Youngjae Yu, Rowan Zellers, <a href="https://nasmith.github.io/"><font color="Black"> Noah A. Smith</font></a> and <a href="https://homes.cs.washington.edu/~yejin/"><font color="Black"> Yejin Choi</font></a>. <br />    <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2022. <b>Best paper award.</b> <font size=-1><a href="https://github.com/GXimingLu/neurologic_decoding">[code]</a></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2112.08348"><b>Prompt Waywardness: The Curious Case of Discretized Interpretation of Continuous Prompts.</b></a>  <br />    <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Xinxi Lyu, Sewon Min, Lianhui Qin, Kyle Richardson, Sean Welleck, <a href="https://homes.cs.washington.edu/~hannaneh/"><font color="Black"> Hannaneh Hajishirzi</font></a>, <a href="https://allenai.org/team/tushark"><font color="Black"> Tushar Khot</font></a>, <a href="https://allenai.org/team/ashishs"><font color="Black"> Ashish Sabharwal</font></a>, Sameer Singh and <a href="https://homes.cs.washington.edu/~yejin/"><font color="Black"> Yejin Choi</font></a>. <br />    <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2022. <font size=-1><a href="http://danielkhashabi.com/files/2022_waywardness/waywardness-2022-naacl-v3.pptx">[slides]</a> <a href="http://danielkhashabi.com/files/2022_waywardness/waywardness-2022-ai2.pptx">[slides2]</a> <a href="https://www.youtube.com/watch?v=EfGaSciDN9Y">[talk]</a> <a href="https://github.com/Alrope123/prompt-waywardness">[code]</a></font></p>
-</li>
-</ul>
-<ul>
 <li><p><a href="https://arxiv.org/abs/2109.07830"><b>Reframing Instructional Prompts to GPTk's Language.</b></a>  <br />    Swaroop Mishra, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Chitta Baral, <a href="https://homes.cs.washington.edu/~yejin/"><font color="Black"> Yejin Choi</font></a> and <a href="https://homes.cs.washington.edu/~hannaneh/"><font color="Black"> Hannaneh Hajishirzi</font></a>. <br />    <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL) - Findings</font>, 2022. <font size=-1><a href="https://www.youtube.com/watch?v=vc8vKuywFIo">[talk]</a> <a href="https://github.com/allenai/reframing">[code]</a></font></p>
 </li>
 </ul>
@@ -233,6 +221,18 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2104.08773"><b>Cross-Task Generalization via Natural Language Crowdsourcing Instructions.</b></a>  <br />    Swaroop Mishra, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Chitta Baral and <a href="https://homes.cs.washington.edu/~hannaneh/"><font color="Black"> Hannaneh Hajishirzi</font></a>. <br />    <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2022. <font size=-1><a href="http://danielkhashabi.com/files/2021_natural_insructions/ai2-talk-may-2021.pdf">[slides]</a> <a href="https://www.youtube.com/watch?v=DbUXFCmeJ34">[talk]</a> <a href="https://github.com/allenai/natural-instructions">[code]</a> <a href="https://instructions.apps.allenai.org/">[project]</a> <a href="https://blog.allenai.org/call-for-contributions-a-community-driven-repository-of-natural-language-instructions-9d3f24d5a9db">[blog]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2111.07408"><b>Time Waits for No One! Analysis and Challenges of Temporal Misalignment.</b></a>  <br />    Kelvin Luu, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Suchin Gururangan, Karishma Mandyam and Noah A Smith. <br />    <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2022. <font size=-1><a href="https://github.com/Kel-Lu/time-waits-for-no-one">[data]</a> <a href="https://www.youtube.com/watch?v=t44GNfHFqns">[talk]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2112.08726"><b>NeuroLogic A*esque Decoding: Constrained Text Generation with Lookahead Heuristics.</b></a>  <br />    Ximing Lu, Sean Welleck, Peter West, Liwei Jiang, Jungo Kasai, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Ronan Le Bras, Lianhui Qin, Youngjae Yu, Rowan Zellers, <a href="https://nasmith.github.io/"><font color="Black"> Noah A. Smith</font></a> and <a href="https://homes.cs.washington.edu/~yejin/"><font color="Black"> Yejin Choi</font></a>. <br />    <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2022. <b>Best paper award.</b> <font size=-1><a href="https://github.com/GXimingLu/neurologic_decoding">[code]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2112.08348"><b>Prompt Waywardness: The Curious Case of Discretized Interpretation of Continuous Prompts.</b></a>  <br />    <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Xinxi Lyu, Sewon Min, Lianhui Qin, Kyle Richardson, Sean Welleck, <a href="https://homes.cs.washington.edu/~hannaneh/"><font color="Black"> Hannaneh Hajishirzi</font></a>, <a href="https://allenai.org/team/tushark"><font color="Black"> Tushar Khot</font></a>, <a href="https://allenai.org/team/ashishs"><font color="Black"> Ashish Sabharwal</font></a>, Sameer Singh and <a href="https://homes.cs.washington.edu/~yejin/"><font color="Black"> Yejin Choi</font></a>. <br />    <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2022. <font size=-1><a href="http://danielkhashabi.com/files/2022_waywardness/waywardness-2022-naacl-v3.pptx">[slides]</a> <a href="http://danielkhashabi.com/files/2022_waywardness/waywardness-2022-ai2.pptx">[slides2]</a> <a href="https://www.youtube.com/watch?v=EfGaSciDN9Y">[talk]</a> <a href="https://github.com/Alrope123/prompt-waywardness">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -248,11 +248,11 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2009.00751"><b>Text Modular Networks: Learning to Decompose Tasks in the Language of Existing Models.</b></a>  <br />    <a href="https://allenai.org/team/tushark"><font color="Black"> Tushar Khot</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Kyle Richardson, Peter Clark and <a href="https://allenai.org/team/ashishs"><font color="Black"> Ashish Sabharwal</font></a>. <br />    <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2021. <font size=-1><a href="http://danielkhashabi.com/files/2021_modularqa/TMNs_NAACL_final.pptx">[slides]</a> <a href="https://www.youtube.com/watch?v=_Q59o0f_HC8">[talk]</a> <a href="https://github.com/allenai/modularqa">[code]</a> <a href="https://modularqa-demo.apps.allenai.org/">[demo]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2106.01465"><b>Ethical-Advice Taker: Do Language Models Understand Natural Language Interventions?</b></a>  <br />    Jieyu Zhao, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, <a href="https://allenai.org/team/tushark"><font color="Black"> Tushar Khot</font></a>, <a href="https://allenai.org/team/ashishs"><font color="Black"> Ashish Sabharwal</font></a> and <a href="https://web.cs.ucla.edu/~kwchang/"><font color="Black"> Kai-Wei Chang</font></a>. <br />    <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL) - Findings</font>, 2021. <font size=-1><a href="https://github.com/allenai/ethical-interventions">[code]</a></font></p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2106.01465"><b>Ethical-Advice Taker: Do Language Models Understand Natural Language Interventions?</b></a>  <br />    Jieyu Zhao, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, <a href="https://allenai.org/team/tushark"><font color="Black"> Tushar Khot</font></a>, <a href="https://allenai.org/team/ashishs"><font color="Black"> Ashish Sabharwal</font></a> and <a href="https://web.cs.ucla.edu/~kwchang/"><font color="Black"> Kai-Wei Chang</font></a>. <br />    <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL) - Findings</font>, 2021. <font size=-1><a href="https://github.com/allenai/ethical-interventions">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2009.00751"><b>Text Modular Networks: Learning to Decompose Tasks in the Language of Existing Models.</b></a>  <br />    <a href="https://allenai.org/team/tushark"><font color="Black"> Tushar Khot</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Kyle Richardson, Peter Clark and <a href="https://allenai.org/team/ashishs"><font color="Black"> Ashish Sabharwal</font></a>. <br />    <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2021. <font size=-1><a href="http://danielkhashabi.com/files/2021_modularqa/TMNs_NAACL_final.pptx">[slides]</a> <a href="https://www.youtube.com/watch?v=_Q59o0f_HC8">[talk]</a> <a href="https://github.com/allenai/modularqa">[code]</a> <a href="https://modularqa-demo.apps.allenai.org/">[demo]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -300,11 +300,11 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/1906.03538"><b>Seeing Things from a Different Angle: Discovering Diverse Perspectives about Claims.</b></a>  <br />    Sihao Chen, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Wenpeng Yin, Chris Callison-Burch and <a href="https://www.cis.upenn.edu/~danroth/"><font color="Black"> Dan Roth</font></a>. <br />    <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2019. <font size=-1><a href="http://danielkhashabi.com/files/2019_perspectrum/perspectrum-poster-naacl-2019.pdf">[poster]</a> <a href="https://github.com/CogComp/perspectrum">[code]</a> <a href="https://www.youtube.com/watch?v=rOgdaLHIDgE">[demo]</a> <a href="http://danielkhashabi.com/files/2019_perspectrum/viz.html">[visualization]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/1906.04761"><b>PerspectroScope: A Window to the World of Diverse Perspectives.</b></a>  <br />    Sihao Chen, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Chris Callison-Burch and <a href="https://www.cis.upenn.edu/~danroth/"><font color="Black"> Dan Roth</font></a>. <br />    <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL) - Demonstrations</font>, 2019. <font size=-1><a href="http://danielkhashabi.com/files/2019_perspectroscope/perspectroscope_poster_072319.pdf">[poster]</a> <a href="https://github.com/CogComp/perspectroscope">[code]</a> <a href="https://www.youtube.com/watch?v=MXBTR1Sp3Bs">[demo]</a></font></p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/1906.04761"><b>PerspectroScope: A Window to the World of Diverse Perspectives.</b></a>  <br />    Sihao Chen, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Chris Callison-Burch and <a href="https://www.cis.upenn.edu/~danroth/"><font color="Black"> Dan Roth</font></a>. <br />    <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL) - Demonstrations</font>, 2019. <font size=-1><a href="http://danielkhashabi.com/files/2019_perspectroscope/perspectroscope_poster_072319.pdf">[poster]</a> <a href="https://github.com/CogComp/perspectroscope">[code]</a> <a href="https://www.youtube.com/watch?v=MXBTR1Sp3Bs">[demo]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/1906.03538"><b>Seeing Things from a Different Angle: Discovering Diverse Perspectives about Claims.</b></a>  <br />    Sihao Chen, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Wenpeng Yin, Chris Callison-Burch and <a href="https://www.cis.upenn.edu/~danroth/"><font color="Black"> Dan Roth</font></a>. <br />    <font color="DarkRed">Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)</font>, 2019. <font size=-1><a href="http://danielkhashabi.com/files/2019_perspectrum/perspectrum-poster-naacl-2019.pdf">[poster]</a> <a href="https://github.com/CogComp/perspectrum">[code]</a> <a href="https://www.youtube.com/watch?v=rOgdaLHIDgE">[demo]</a> <a href="http://danielkhashabi.com/files/2019_perspectrum/viz.html">[visualization]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -381,7 +381,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-07-08 15:48:28 NDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-07-11 05:33:33 NDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
