--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
 <table class="imgtable"><tr><td>
 <img src="profile11.png" alt="alt text" width="170px" />&nbsp;</td>
 <td align="left"><p><span style="font-weight: bold; font-size: 125%; line-height: 2.0;">Daniel Khashabi </span> <br />
-Assistant Professor of <a href="https://www.cs.jhu.edu/">Computer Science</a> <br />
+Assistant Professor <br />
 <a href="https://www.clsp.jhu.edu/">Center for Language and Speech Processing</a> <br />
 <a href="https://ai.jhu.edu/">Data Science and AI Institute</a> <br />
+<a href="https://www.cs.jhu.edu/">Department of Computer Science</a> <br />
 <a href="https://engineering.jhu.edu/">Whiting School of Engineering</a> <br />
 <a href="https://jhu.edu/">Johns Hopkins University</a> <br /><br />
 Office: Hackerman Hall 316B | Email: <tt>danielk <a href="https://en.wikipedia.org/wiki/At_sign">¯\_(ツ)_/¯</a> jhu.edu</tt> <br /></p>
@@ -95,6 +96,10 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <p><h2 id="publication">Publication</h2></p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2407.09007"><b>Benchmarking Language Model Creativity: A Case Study on Code Generation.</b></a>  <br />    <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, Dixuan Wang, <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a>, <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />    <font color="DarkRed">arXiv preprint arXiv:2407.09007</font>, 2024. <font size=-1><a href="https://github.com/JHU-CLSP/NeoCoder">[code]</a></font></p>
+</li>
+</ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2407.07778"><b>WorldAPIs: The World Is Worth How Many APIs? A Thought Experiment.</b></a>  <br />    Jiefu Ou, Arda Uzunoglu, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />    <font color="DarkRed">arXiv preprint arXiv:2407.07778</font>, 2024. <font size=-1></font></p>
 </li>
@@ -168,7 +173,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2305.13252"><b>&lsquo;&lsquo;According to &hellip;&rsquo;&rsquo;: Prompting Language Models Improves Quoting from Pre-Training Data.</b></a>  <br />    <a href="https://orionweller.github.io/"><font color="Black"> Orion Weller</font></a>, <a href="https://marcmarone.com/"><font color="Black"> Marc Marone</font></a>, <a href="https://nweir127.github.io/"><font color="Black"> Nathaniel Weir</font></a>, Dawn Lawrie, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />    <font color="DarkRed">Conference of the European Chapter of the Association for Computational Linguistics (EACL)</font>, 2024. <font size=-1><a href="https://www.youtube.com/watch?v=Ke8Phecf6Ko">[talk]</a> <a href="https://github.com/JHU-CLSP/according_to_wikipedia">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2305.13252"><b>&lsquo;&lsquo;According to &hellip;&rsquo;&rsquo;: Prompting Language Models Improves Quoting from Pre-Training Data.</b></a>  <br />    <a href="https://orionweller.github.io/"><font color="Black"> Orion Weller</font></a>, <a href="https://marcmarone.com/"><font color="Black"> Marc Marone</font></a>, <a href="https://nweir127.github.io/"><font color="Black"> Nathaniel Weir</font></a>, Dawn Lawrie, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />    <font color="DarkRed">Conference of the European Chapter of the Association for Computational Linguistics (EACL)</font>, 2024. <font size=-1><a href="https://www.youtube.com/watch?v=Ke8Phecf6Ko">[talk]</a> <a href="https://github.com/orionw/according-to">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -385,7 +390,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-07-12 10:11:25 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-07-15 15:18:25 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
