--- a/index.html
+++ b/index.html
@@ -137,10 +137,6 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2407.07778"><b>WorldAPIs: The World Is Worth How Many APIs? A Thought Experiment.</b></a>  <br />    <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, <a href="https://scholar.google.com/citations?user=5fsB_GMAAAAJ"><font color="Black"> Arda Uzunoglu</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Natural Language Reasoning and Structured Explanations Workshop at ACL 2024</font>, 2024. <font size=-1></font></p>
-</li>
-</ul>
-<ul>
 <li><p><a href="https://arxiv.org/abs/2401.13136"><b>The Language Barrier: Dissecting Safety Challenges of LLMs in Multilingual Context.</b></a>  <br />    <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://steventan0110.github.io/"><font color="Black"> Weiting Tan</font></a>, Sihao Chen, Yunmo Chen, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://www.fe1ixxu.com/"><font color="Black"> Haoran Xu</font></a>, Boyuan Zheng, <a href="https://www.cs.jhu.edu/~phi/"><font color="Black"> Philipp Koehn</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL) - Findings</font>, 2024. <font size=-1></font></p>
 </li>
 </ul>
@@ -157,7 +153,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2310.08540"><b>Revisiting the Hypothesis: Do Pretrained Transformers Learn In-Context by Gradient Descent?</b></a>  <br />    <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, Aayush Mishra and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">International Conference on Machine Learning (ICML)</font>, 2024. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2310.08540"><b>Revisiting the Hypothesis: Do Pretrained Transformers Learn In-Context by Gradient Descent?</b></a>  <br />    <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://aamixsh.github.io/"><font color="Black"> Aayush Mishra</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">International Conference on Machine Learning (ICML)</font>, 2024. <font size=-1><a href="https://danielkhashabi.com/files/2024_icl_gd/2024_icml_icl_gd.pptx">[slides]</a> <a href="https://x.com/Lingfeng_nlp/status/1713003711629516862">[tweet]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -174,6 +170,10 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2305.13252"><b>&lsquo;&lsquo;According to &hellip;&rsquo;&rsquo;: Prompting Language Models Improves Quoting from Pre-Training Data.</b></a>  <br />    <a href="https://orionweller.github.io/"><font color="Black"> Orion Weller</font></a>, <a href="https://marcmarone.com/"><font color="Black"> Marc Marone</font></a>, <a href="https://nweir127.github.io/"><font color="Black"> Nathaniel Weir</font></a>, Dawn Lawrie, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">Conference of the European Chapter of the Association for Computational Linguistics (EACL)</font>, 2024. <font size=-1><a href="https://www.youtube.com/watch?v=Ke8Phecf6Ko">[talk]</a> <a href="https://github.com/orionw/according-to">[code]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2407.07778"><b>WorldAPIs: The World Is Worth How Many APIs? A Thought Experiment.</b></a>  <br />    <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, <a href="https://scholar.google.com/citations?user=5fsB_GMAAAAJ"><font color="Black"> Arda Uzunoglu</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Natural Language Reasoning and Structured Explanations Workshop at ACL</font>, 2024. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -269,11 +269,11 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2012.06154"><b>ParsiNLU: A Suite of Language Understanding Challenges for Persian.</b></a>  <br />    <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Arman Cohan, Siamak Shakeri, Pedram Hosseini, Pouya Pezeshkpour, Malihe Alikhani, Moin Aminnaseri, Marzieh Bitaab, Faeze Brahman, Sarik Ghazarian and others. <br />   <font color="DarkRed">Transactions of the Association for Computational Linguistics (TACL)</font>, 2021. <font size=-1><a href="https://docs.google.com/presentation/d/1D9tO052D86J_OGiFV-VRoeWZ-kaEyT0nwKVVz4z0SLc/edit#slide=id.g82736d3e0d_0_26">[slides]</a> <a href="https://github.com/persiannlp/parsinlu">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2101.02235"><b>Did Aristotle Use a Laptop? A Question Answering Benchmark with Implicit Reasoning Strategies.</b></a>  <br />    Mor Geva, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Elad Segal, <a href="https://allenai.org/team/tushark"><font color="Black"> Tushar Khot</font></a>, <a href="https://www.cis.upenn.edu/~danroth/"><font color="Black"> Dan Roth</font></a> and Jonathan Berant. <br />   <font color="DarkRed">Transactions of the Association for Computational Linguistics (TACL)</font>, 2021. <font size=-1><a href="https://allenai.org/data/strategyqa">[data]</a> <a href="https://docs.google.com/presentation/d/1lm4S7YE1RHG4ZtMMXWkPUKVcqKI-z0aDAbAHSh16KNQ/edit#slide=id.g464d566969_0_0">[slides]</a> <a href="https://leaderboard.allenai.org/strategyqa/submissions/public">[leaderboard]</a></font></p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2101.02235"><b>Did Aristotle Use a Laptop? A Question Answering Benchmark with Implicit Reasoning Strategies.</b></a>  <br />    Mor Geva, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Elad Segal, <a href="https://allenai.org/team/tushark"><font color="Black"> Tushar Khot</font></a>, <a href="https://www.cis.upenn.edu/~danroth/"><font color="Black"> Dan Roth</font></a> and Jonathan Berant. <br />   <font color="DarkRed">Transactions of the Association for Computational Linguistics (TACL)</font>, 2021. <font size=-1><a href="https://allenai.org/data/strategyqa">[data]</a> <a href="https://docs.google.com/presentation/d/1lm4S7YE1RHG4ZtMMXWkPUKVcqKI-z0aDAbAHSh16KNQ/edit#slide=id.g464d566969_0_0">[slides]</a> <a href="https://leaderboard.allenai.org/strategyqa/submissions/public">[leaderboard]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2012.06154"><b>ParsiNLU: A Suite of Language Understanding Challenges for Persian.</b></a>  <br />    <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Arman Cohan, Siamak Shakeri, Pedram Hosseini, Pouya Pezeshkpour, Malihe Alikhani, Moin Aminnaseri, Marzieh Bitaab, Faeze Brahman, Sarik Ghazarian and others. <br />   <font color="DarkRed">Transactions of the Association for Computational Linguistics (TACL)</font>, 2021. <font size=-1><a href="https://docs.google.com/presentation/d/1D9tO052D86J_OGiFV-VRoeWZ-kaEyT0nwKVVz4z0SLc/edit#slide=id.g82736d3e0d_0_26">[slides]</a> <a href="https://github.com/persiannlp/parsinlu">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -321,7 +321,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/1908.04926"><b>Reasoning-Driven Question-Answering for Natural Language Understanding.</b></a>  <br />     and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">PhD thesis at University of Pennsylvania</font>, 2019. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/1908.04926"><b>Reasoning-Driven Question-Answering for Natural Language Understanding.</b></a>  <br />    <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">PhD thesis at University of Pennsylvania</font>, 2019. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -390,7 +390,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-07-22 16:40:05 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-07-25 13:04:26 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
