--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2407.09007"><b>Benchmarking Language Model Creativity: A Case Study on Code Generation.</b></a>  <br />    <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, Dixuan Wang, <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a>, <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2407.09007</font>, 2024. <font size=-1><a href="https://github.com/JHU-CLSP/NeoCoder">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2407.09007"><b>Benchmarking Language Model Creativity: A Case Study on Code Generation.</b></a>  <br />    <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, Dixuan Wang, <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a>, <a href="https://jiangdongwei.com/"><font color="Black"> Dongwei Jiang</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2407.09007</font>, 2024. <font size=-1><a href="https://github.com/JHU-CLSP/NeoCoder">[code]</a> <a href="https://x.com/Yining__Lu/status/1813203828159967449">[tweet]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -137,7 +137,11 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2401.13136"><b>The Language Barrier: Dissecting Safety Challenges of LLMs in Multilingual Context.</b></a>  <br />    <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://steventan0110.github.io/"><font color="Black"> Weiting Tan</font></a>, Sihao Chen, Yunmo Chen, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://www.fe1ixxu.com/"><font color="Black"> Haoran Xu</font></a>, Boyuan Zheng, <a href="https://www.cs.jhu.edu/~phi/"><font color="Black"> Philipp Koehn</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL) - Findings</font>, 2024. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2407.07778"><b>WorldAPIs: The World Is Worth How Many APIs? A Thought Experiment.</b></a>  <br />    <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, <a href="https://scholar.google.com/citations?user=5fsB_GMAAAAJ"><font color="Black"> Arda Uzunoglu</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Natural Language Reasoning and Structured Explanations Workshop at ACL</font>, 2024. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2401.13136"><b>The Language Barrier: Dissecting Safety Challenges of LLMs in Multilingual Context.</b></a>  <br />    <a href="https://shadowkiller33.github.io/"><font color="Black"> Lingfeng Shen</font></a>, <a href="https://steventan0110.github.io/"><font color="Black"> Weiting Tan</font></a>, Sihao Chen, Yunmo Chen, <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, <a href="https://www.fe1ixxu.com/"><font color="Black"> Haoran Xu</font></a>, Boyuan Zheng, <a href="https://www.cs.jhu.edu/~phi/"><font color="Black"> Philipp Koehn</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL) - Findings</font>, 2024. <font size=-1><a href="https://x.com/Lingfeng_nlp/status/1791304500927693032">[tweet]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -170,10 +174,6 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2305.13252"><b>&lsquo;&lsquo;According to &hellip;&rsquo;&rsquo;: Prompting Language Models Improves Quoting from Pre-Training Data.</b></a>  <br />    <a href="https://orionweller.github.io/"><font color="Black"> Orion Weller</font></a>, <a href="https://marcmarone.com/"><font color="Black"> Marc Marone</font></a>, <a href="https://nweir127.github.io/"><font color="Black"> Nathaniel Weir</font></a>, Dawn Lawrie, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">Conference of the European Chapter of the Association for Computational Linguistics (EACL)</font>, 2024. <font size=-1><a href="https://www.youtube.com/watch?v=Ke8Phecf6Ko">[talk]</a> <a href="https://github.com/orionw/according-to">[code]</a></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2407.07778"><b>WorldAPIs: The World Is Worth How Many APIs? A Thought Experiment.</b></a>  <br />    <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, <a href="https://scholar.google.com/citations?user=5fsB_GMAAAAJ"><font color="Black"> Arda Uzunoglu</font></a>, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Natural Language Reasoning and Structured Explanations Workshop at ACL</font>, 2024. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -390,7 +390,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-07-25 13:04:26 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-07-29 09:00:19 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
